--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '273124633';
+    var serviceWorkerVersion = '3573531191';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
