--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/irisweb-frontend/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -36,12 +36,15 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '273124633';
+    var serviceWorkerVersion = '3573531191';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
