--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
   <style>
-    body {background-color: #212121;}
+    body {background-color: white;}
     
       .loading {
         display: flex;
@@ -61,9 +61,9 @@
         border-radius: 50%;
         border: 15px solid;
         border-top: 16px solid #FFFFFF;
-        border-right: 16px solid #212121;
+        border-right: 16px solid lightskyblue;
         border-bottom: 16px solid #FFFFFF;
-        border-left: 16px solid #212121;
+        border-left: 16px solid lightskyblue;
         width: 120px;
         height: 120px;
         -webkit-animation: spin 2s linear infinite;
