--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+  <base href="/irisweb-frontend/">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
