--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <title>nfc_card</title>
+  <title>Iris Cards</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1748666404';
+    var serviceWorkerVersion = '2454816284';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -50,10 +51,9 @@
       align-items: center; /* Cross Axis */
     }
     .indicator{
-      width: 1vw;
+      width: 4vw;
     }
 </style>
-
 </head>
 <body style="overflow: hidden">
   <div id="loading_indicator" class="container">
@@ -76,7 +76,6 @@
       });
     });
   </script>
-
 
 <script>
   window.onload = function () {
